--- a/views/home.hbs
+++ b/views/home.hbs
@@ -20,6 +20,7 @@
         <a href="/covid" class="btn btn-danger">Covid Data</a>
         <a href="/covid_states_wise" class="btn btn-danger">State Wise Covid</a>
         <a href="/covid_testing" class="btn btn-danger">Covid Testing</a>
+        <a href="/products" class="btn btn-danger">Shopping Products</a>
     </div>
 </body>
 </html>
